# ai-ml-sklearn

./: .dockerignore  .env.docker  .env.minikube  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile old  Dockerfile_old  MLproject  README copy.md  README.md  README_old.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-build-training-image.yaml  ci-code-quality.yaml  ci-docker-build-push.yaml  train.yaml  training.yaml
notebooks/: exploring wine_dataset.ipynb  stuff.ipynb  test.ipynb  tets.ipynb
src/: config.py  data.py  evaluate.py  hyperparameter_tuning.py  serve.py  serve_old.py  train.py  training.py  tune.py
src/_utils/: __init__.py  get_or_create_experiment.py  logging.py  logging_callback.py  logging_config.py  mlflow_tags.py
src/serving/: __init__.py  config.py  schemas.py  serve.py  wine_classifier.py
src/training/: __init__.py  config.py  data.py  optimize_hyperparameters.py  train.py  tune.py
tests/: test_wine_classifier.py
{{inputs.parameters.mlflow_uri}}/0/: meta.yaml
