[project]
name = "ai-ml-sklearn"
version = "0.1.0"
description = "Example model training and serving with ray, mlflow, sklearn and fastapi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.64.0",
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "mlflow>=3.2.0",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pydantic-settings>=2.12.0",
    "ray[default,serve]>=2.48.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]
