[project]
name = "ai-ml-sklearn"
version = "0.1.0"
description = "Example model training and serving with ray, mlflow, sklearn and fastapi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mlflow>=3.2.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
# Training-specific dependencies
# Make sure Ray version is fix as cluster expects it
training = [
    "joblib>=1.5.1",
    "dvc[s3]>=3.64.0",
    "ray[default,train]==2.51.0",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "scikit-learn>=1.7.1",
]

# Serving-specific dependencies
serving = [
    "ray[serve]==2.51.0",
    "fastapi>=0.116.1",
    "numpy>=1.24.0",
]

[dependency-groups]
# Development dependencies (local-only, not published)
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "watchfiles>=1.1.0",
]

[tool.uv]
concurrent-builds = 4  # sklearn is lightweight, can parallelize
concurrent-downloads = 8
concurrent-installs = 4
